Server app lab4
